--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,19 @@
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+
 body{
-    background-color: #fffffa;
-    color:#001a23;
+    --point-color : #f48600;
+    --blue-black : #001a23;
+    --whity:#fffffa;
+
+    background-color: var(--blue-black);
+    color:var(--whity);
+    font-family: 'Nanum Gothic', sans-serif;
+}
+.header{
+    width: 400px;
+    border-bottom: 1px solid var(--point-color);
+
 }
 
 .category-wrapper{
@@ -10,6 +23,13 @@ body{
     width: 90vw;
 }
 
+.headline{
+    padding : 10px;
+    border-bottom : 1px solid var(--point-color);
+}
+.date{
+    padding: 0 7px;
+}
 .post-list{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -25,18 +45,19 @@ body{
     margin: 10px;
     max-height : 250px;
     border: 1px solid #001a23;
-    border-radius: 3px;
+    border-radius: 5px;
     padding: 10px;
     overflow: hidden;
+    background-color: var(--whity);
 }
 .item{
 
 }
 .item__header{
-
+    margin-bottom: 5px;
 }
 .item__section{
              /* 반드시 "visible" 이외의 값이 지정되어 있어야 한다. */
-
+margin: 0 10px;
 
 }
